--- a/packages/vn-cli/package.json
+++ b/packages/vn-cli/package.json
@@ -25,6 +25,9 @@
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.3",
     "commander": "^12.0.0",
+    "download-git-repo": "^3.0.2",
+    "handlebars": "^4.7.8",
+    "ora": "^8.0.1",
     "prompts": "^2.4.2",
     "unbuild": "^2.0.0"
   },
