build: add create-vite command

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "apps/next-page-router-template"]
 	path = apps/next-page-router-template
 	url = https://github.com/yyd1142/next-page-router-template.git
+[submodule "apps/vite-react-template"]
+	path = apps/vite-react-template
+	url = https://github.com/yyd1142/vite-react-template.git
